fix(style): incorrect column alignment

--- a/src/app/shared/components/product-filters-panel/product-filters-panel.component.css
+++ b/src/app/shared/components/product-filters-panel/product-filters-panel.component.css
@@ -13,6 +13,6 @@ form {
 @media(min-width: 1008px) {
   form {
     grid-gap: 1rem;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
